--- a/index.html
+++ b/index.html
@@ -1,1 +1,222 @@
+<!DOCTYPE html>
+<html lang="es">
 
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio Personal</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto&display=swap"
+        rel="stylesheet" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <script src="https://unpkg.com/scrollreveal"></script>
+</head>
+
+<body>
+
+    <div class="navbar-wrapper">
+        <button class="nav-arrow left" aria-label="Scroll izquierda">‹</button>
+        <nav class="navbar">
+            <ul>
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#sobre-mi">Sobre mí</a></li>
+                <li><a href="#tecnologias">Tecnologías</a></li>
+                <li><a href="#experiencia">Experiencia</a></li>
+                <li><a href="#estudios">Estudios</a></li>
+                <li><a href="#personal">Personal</a></li>
+                <li><a href="#cv">CV</a></li>
+                <li><a href="#redes">Redes</a></li>
+                <li><a href="#contacto">Contacto</a></li>
+            </ul>
+        </nav>
+        <button class="nav-arrow right" aria-label="Scroll derecha">›</button>
+    </div>
+
+    <header>
+        <h1 id="title">Daniel Balsera</h1>
+    </header>
+
+    <section id="inicio">
+        <h2 class="typing">Hola, soy Daniel</h2>
+        <p>Diseñador web & programador.</p>
+    </section>
+
+    <section id="sobre-mi">
+        <h2>Sobre mí</h2>
+        <p>
+            Soy un diseñador web y programador apasionado por crear experiencias digitales modernas, funcionales y
+            estéticamente impactantes.
+            Me especializo en el desarrollo de interfaces limpias y eficientes, combinando creatividad con código para
+            dar vida a ideas únicas.
+        </p><br />
+        <p>
+            Tengo experiencia trabajando con HTML, CSS, JavaScript y frameworks modernos. Me gusta mantenerme
+            actualizado con las últimas
+            tendencias en diseño UI/UX y tecnologías web. Siempre busco soluciones que sean tanto visualmente atractivas
+            como técnicamente sólidas.
+        </p><br />
+        <p>
+            Actualmente estoy construyendo mi portfolio y trabajando en varios proyectos personales. Si tienes una idea,
+            un proyecto o simplemente
+            quieres charlar sobre diseño y desarrollo, estaré encantado de conectar contigo.
+        </p>
+    </section>
+
+    <section id="proyectos">
+        <h2>Proyectos</h2>
+        <div class="proyectos-grid">
+            <div class="proyecto">
+                <img src="./imgs/ECopy.PNG" alt="Proyecto 1" style=" width: 80%; height: auto;">
+                <h3>Web Ecopy</h3>
+                <p>Web corporativa desarrollada durante mis prácticas en Waricreative. Colaboré en diseño y la
+                    maquetación utilizando WordPress, personalizando temas y plugins para adaptarlos a las necesidades
+                    del cliente. El proyecto incluyó la optimización para SEO y la integración de funcionalidades
+                    específicas solicitadas por la empresa.</p>
+                <a href="https://ecopycordoba.com/" target="_blank">Ver proyecto</a>
+            </div>
+
+            <div class="proyecto">
+                <img src="./imgs/MamasMagicas.PNG" alt="Proyecto 2" style=" width: 80%; height: auto;">
+                <h3>Web mamas mágicas</h3>
+                <p>Web corporativa desarrollada durante mis prácticas en Waricreative. Colaboré en diseño y la
+                    maquetación utilizando WordPress, personalizando temas y plugins para adaptarlos a las necesidades
+                    del cliente. El proyecto incluyó la optimización para SEO y la integración de funcionalidades
+                    específicas solicitadas por la empresa.
+                </p>
+                <a href="https://escuelaparamamasmagicas.com/" target="_blank">Ver proyecto</a>
+            </div>
+        </div>
+    </section>
+    <section id="tecnologias">
+        <h2>Tecnologías / Habilidades</h2>
+        <h3>Profesionales</h3>
+        <ul>
+            <li><strong>Nivel alto-medio:</strong> WordPress (Avada), WooCommerce, HTML5, CSS, JavaScript, Consultoría
+                ERP, Odoo</li>
+            <li><strong>Nivel medio:</strong> PHP, JQuery, IA, Administración de Bases de Datos, Linux y Windows</li>
+            <li><strong>Nivel bajo:</strong> Montaje y mantenimiento de equipos, Protección de sistemas, Docker, Diseño
+                gráfico (Canva, Photoshop, Illustrator)</li>
+        </ul>
+
+        <h3>Personales</h3>
+        <ul>
+            <li>Trabajo en equipo</li>
+            <li>Apoyo a compañeros</li>
+            <li>Resolución de problemas</li>
+            <li>Organización</li>
+            <li>Ganas de aprender</li>
+        </ul>
+    </section>
+
+    <section id="experiencia">
+        <h2>Experiencia Laboral</h2>
+        <div class="job">
+            <h3>Waricreative · 2025</h3>
+            <p>Diseñador web y gráfico en prácticas</p>
+            <ul>
+                <li>Creación de sitios web con WordPress, HTML, CSS y Avada</li>
+                <li>Adaptación de plantillas y diseño responsive</li>
+                <li>Diseño de mockups con Canva</li>
+            </ul>
+        </div>
+        <div class="job">
+            <h3>Solar del Valle · 2023-2024</h3>
+            <p>Consultor Odoo y Dpto. Software</p>
+            <ul>
+                <li>Coordinación del equipo de desarrollo</li>
+                <li>Consultoría, análisis e implementación de Odoo</li>
+                <li>Desarrollo de soluciones personalizadas</li>
+            </ul>
+        </div>
+        <div class="job">
+            <h3>Konecta (Iberdrola) · 2023</h3>
+            <p>Teleoperador</p>
+            <ul>
+                <li>Atención al cliente y resolución de incidencias</li>
+                <li>Gestión de contratos y servicios energéticos</li>
+            </ul>
+        </div>
+        <div class="job">
+            <h3>ICCA · 2023</h3>
+            <p>Desarrollador Backend</p>
+            <ul>
+                <li>Desarrollo con C# y JavaScript</li>
+                <li>Mantenimiento y actualización de servicios backend</li>
+            </ul>
+        </div>
+        <div class="job">
+            <h3>Smalldev · 2023</h3>
+            <p>Prácticas de consultor Odoo</p>
+            <ul>
+                <li>Personalización de módulos en Python y XML</li>
+                <li>Pruebas funcionales y soporte a clientes</li>
+                <li>Documentación de procesos</li>
+            </ul>
+        </div>
+        <div class="job">
+            <h3>SIS Córdoba · 2021</h3>
+            <p>Prácticas de Mantenimiento SI</p>
+            <ul>
+                <li>Instalación y configuración de impresoras</li>
+                <li>Diagnóstico y resolución de incidencias</li>
+                <li>Mantenimiento preventivo de equipos</li>
+            </ul>
+        </div>
+        <div class="job">
+            <h3>STC Córdoba · 2019</h3>
+            <p>Prácticas de técnico informático</p>
+            <ul>
+                <li>Mantenimiento y reparación de equipos</li>
+                <li>Configuración de redes y sistemas operativos</li>
+                <li>Soporte técnico a usuarios</li>
+            </ul>
+        </div>
+    </section>
+
+    <section id="estudios">
+        <h2>Estudios</h2>
+        <ul>
+            <li>2024–2025 · Desarrollo de Aplicaciones Web · IES Gran Capitán</li>
+            <li>2021–2023 · Desarrollo de Aplicaciones Multiplataforma · CES Lope de Vega</li>
+            <li>2019–2021 · Administración de Sistemas Informáticos en Red · CES Lope de Vega</li>
+            <li>2017–2019 · Sistemas Microinformáticos y Redes · CES Lope de Vega</li>
+        </ul>
+    </section>
+
+    <section id="personal">
+        <h2>Sobre mí (Personal)</h2>
+        <p>Soy una persona proactiva, organizada y con muchas ganas de seguir creciendo en el mundo del desarrollo web y
+            software. Me entusiasma el aprendizaje continuo y disfruto colaborando con equipos multidisciplinares. Fuera
+            del trabajo, me gusta el diseño gráfico, la música, entrenar, viajar y descubrir nuevas culturas.</p>
+    </section>
+
+    <section id="cv">
+        <h2>Descargar CV</h2>
+        <p>Puedes descargar mi CV actualizado en formato PDF desde aquí:</p>
+        <a href="./docs/Daniel-Balsera-CV.pdf" download>Descargar CV</a>
+    </section>
+
+    <section id="redes">
+        <h2>Redes Sociales</h2>
+        <ul>
+            <li><a href="https://www.linkedin.com/in/tuusuario" target="_blank">LinkedIn</a></li>
+            <li><a href="https://github.com/tuusuario" target="_blank">GitHub</a></li>
+        </ul>
+    </section>
+
+    <section id="contacto">
+        <h2>Contacto</h2>
+        <p>Correo: <a href="mailto:tu.email@example.com">balseradesign@gmail.com</a></p>
+        <p>Teléfono: <a href="tel:+123456789">+34 690 99 50 89</a></p>
+    </section>
+
+
+
+    <script src="./js/scrollReveal.js"></script>
+    <div id="particles-js"></div>
+    <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
+    <script src="./js/fondoAnimado.js"></script>
+
+</body>
+<script src="./js/navbar.js"></script>
+
+</html>
