--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
             <ul>
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#sobre-mi">Sobre mí</a></li>
+                <li><a href="#proyectos">Proyectos</a></li>
                 <li><a href="#tecnologias">Tecnologías</a></li>
                 <li><a href="#experiencia">Experiencia</a></li>
                 <li><a href="#estudios">Estudios</a></li>
-                <li><a href="#personal">Personal</a></li>
+                <li><a href="#personal">Biografía</a></li>
                 <li><a href="#cv">CV</a></li>
                 <li><a href="#redes">Redes</a></li>
                 <li><a href="#contacto">Contacto</a></li>
@@ -63,6 +64,7 @@
 
     <section id="proyectos">
         <h2>Proyectos</h2>
+        <h3 class="categoriaProyecto">Páginas web</h3>
         <div class="proyectos-grid">
             <div class="proyecto">
                 <img src="./imgs/ECopy.PNG" alt="Proyecto 1" style=" width: 80%; height: auto;">
@@ -85,26 +87,67 @@
                 <a href="https://escuelaparamamasmagicas.com/" target="_blank">Ver proyecto</a>
             </div>
         </div>
+
+        <h3 class="categoriaProyecto" style="margin-top: 30px">Logos</h3>
+        <div class="proyectos-grid">
+            <div class="proyecto">
+                <img src="./imgs/OpcionLogo2.png" alt="Logo 1" >
+                <h3>Logo Balsera Design</h3>
+                <p>Diseño original del logotipo de mi marca personal,con un enfoque en
+                    simplicidad, versatilidad y reconocimiento visual.
+                    Representa la identidad creativa y profesional de Balsera Design.</p>
+            </div>
+            <div class="proyecto">
+                <img src="./imgs/LogoLumoCraft.png" alt="Logo2">
+                <h3>Logo LumoCraft</h3>
+                <p>LUMOCRAFT es una identidad visual ficticia diseñada como ejercicio de branding. El objetivo fue crear
+                    un logotipo limpio, con un aire artesanal y tecnológico, ideal para una marca vinculada a la
+                    creatividad, la innovación o el diseño de iluminación.</p>
+            </div>
+        </div>
     </section>
+    <!-- Nueva sección: Proyectos en progreso -->
+    <section id="proyectos-en-progreso">
+        <h2>Proyectos en progreso</h2>
+        <div class="proyectos-grid">
+            
+            <div class="proyecto">
+                <h3>Web de mi futura compañía: Balsera Design</h3>
+                <p>Estoy desarrollando una web con wordpress para mi futura compañía, en la que se las diferentes empresas podrán contactar conmigo para el diseño de 
+                sus páginas web, logos, mockups, etc..
+                </p>
+                <p>Fecha estimada: 25-07-2025</p>
+            </div>
+            <div class="proyecto">
+                <h3>Plataforma para Cinéfilos y Gamers</h3>
+                <p>Estoy desarrollando una plataforma de noticias y blogs sobre el mundo del cine, con nuevos estrenos, información sobre estos, sobre videojuegos, etc..</p>
+                <p>Fecha estimada: 25-11-2025</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Sección Tecnologías / Habilidades -->
     <section id="tecnologias">
         <h2>Tecnologías / Habilidades</h2>
         <h3>Profesionales</h3>
-        <ul>
-            <li><strong>Nivel alto-medio:</strong> WordPress (Avada), WooCommerce, HTML5, CSS, JavaScript, Consultoría
-                ERP, Odoo</li>
-            <li><strong>Nivel medio:</strong> PHP, JQuery, IA, Administración de Bases de Datos, Linux y Windows</li>
-            <li><strong>Nivel bajo:</strong> Montaje y mantenimiento de equipos, Protección de sistemas, Docker, Diseño
-                gráfico (Canva, Photoshop, Illustrator)</li>
-        </ul>
+        <div class="skills-list professional">
+            <span class="skill-tag">WordPress (Avada)</span>
+            <span class="skill-tag">WooCommerce</span>
+            <span class="skill-tag">HTML5</span>
+            <span class="skill-tag">CSS</span>
+            <span class="skill-tag">JavaScript</span>
+            <span class="skill-tag">Consultoría ERP</span>
+            <span class="skill-tag">Odoo</span>
+        </div>
 
         <h3>Personales</h3>
-        <ul>
-            <li>Trabajo en equipo</li>
-            <li>Apoyo a compañeros</li>
-            <li>Resolución de problemas</li>
-            <li>Organización</li>
-            <li>Ganas de aprender</li>
-        </ul>
+        <div class="skills-list personal">
+            <span class="skill-tag">Trabajo en equipo</span>
+            <span class="skill-tag">Apoyo a compañeros</span>
+            <span class="skill-tag">Resolución de problemas</span>
+            <span class="skill-tag">Organización</span>
+            <span class="skill-tag">Ganas de aprender</span>
+        </div>
     </section>
 
     <section id="experiencia">
@@ -198,14 +241,14 @@
     <section id="redes">
         <h2>Redes Sociales</h2>
         <ul>
-            <li><a href="https://www.linkedin.com/in/tuusuario" target="_blank">LinkedIn</a></li>
-            <li><a href="https://github.com/tuusuario" target="_blank">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/daniel-fernández-balsera-03315425b"> LinkedIn</a></li>
+            <li><a href="https://github.com/BalseraDesign" target="_blank">GitHub</a></li>
         </ul>
     </section>
 
     <section id="contacto">
         <h2>Contacto</h2>
-        <p>Correo: <a href="mailto:tu.email@example.com">balseradesign@gmail.com</a></p>
+        <p>Correo: <a href="mailto:baseradesign@gmail.com">balseradesign@gmail.com</a></p>
         <p>Teléfono: <a href="tel:+123456789">+34 690 99 50 89</a></p>
     </section>
 
