Añadido modo oscuro

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
 
     <div class="navbar-wrapper">
+        <button id="toggle-dark-mode">🌙 Modo oscuro</button>
         <button class="nav-arrow left" aria-label="Scroll izquierda">‹</button>
         <nav class="navbar">
             <ul>
@@ -39,6 +40,7 @@
     <section id="inicio">
         <h2 class="typing">Hola, soy Daniel</h2>
         <p>Diseñador web & programador.</p>
+        <p>Combino diseño intuitivo con código limpio para crear experiencias web funcionales y visualmente impactantes.</p>
     </section>
 
     <section id="sobre-mi">
@@ -258,7 +260,7 @@
     <div id="particles-js"></div>
     <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
     <script src="./js/fondoAnimado.js"></script>
-
+    <script src="./js/darkmode.js"></script>
 </body>
 <script src="./js/navbar.js"></script>
 
