--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio Personal</title>
+    <title>Daniel Fernández Balsera</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" href="./css/styles.css" />
