--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
             <div class="proyecto">
                 <img src="./imgs/MamasMagicas.PNG" alt="Proyecto 2" style=" width: 80%; height: auto;">
-                <h3>Web mamas mágicas</h3>
+                <h3>Web mamás mágicas</h3>
                 <p>Web corporativa desarrollada durante mis prácticas en Waricreative. Colaboré en diseño y la
                     maquetación utilizando WordPress, personalizando temas y plugins para adaptarlos a las necesidades
                     del cliente. El proyecto incluyó la optimización para SEO y la integración de funcionalidades
