Mejora web y cambio de mi logo

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             
             <div class="proyecto">
                 <h3>Web de mi futuro proyecto: Balsera Design</h3>
-                <p>Estoy desarrollando una web con wordpress para mi futuro proyecto, en la que se las diferentes empresas podrán contactar conmigo para el diseño de 
+                <p>Estoy desarrollando una web con wordpress para mi futuro proyecto, en la que las diferentes empresas podrán contactar conmigo para el diseño de 
                 sus páginas web, logos, mockups, etc..
                 </p>
                 <p>Fecha estimada: 25-07-2025</p>
