--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </section>
 
     <section id="proyectos">
-        <h2>Proyectos</h2>
+        <h2>Proyectos Profesionales</h2>
         <h3 class="categoriaProyecto">Páginas web</h3>
         <div class="proyectos-grid">
             <div class="proyecto">
@@ -87,24 +87,6 @@
                     específicas solicitadas por la empresa.
                 </p>
                 <a href="https://escuelaparamamasmagicas.com/" target="_blank">Ver proyecto</a>
-            </div>
-        </div>
-
-        <h3 class="categoriaProyecto" style="margin-top: 30px">Logos</h3>
-        <div class="proyectos-grid">
-            <div class="proyecto">
-                <img src="./imgs/OpcionLogo2.png" alt="Logo 1" >
-                <h3>Logo Balsera Design</h3>
-                <p>Diseño original del logotipo de mi marca personal,con un enfoque en
-                    simplicidad, versatilidad y reconocimiento visual.
-                    Representa la identidad creativa y profesional de Balsera Design.</p>
-            </div>
-            <div class="proyecto">
-                <img src="./imgs/LogoLumoCraft.png" alt="Logo2">
-                <h3>Logo LumoCraft</h3>
-                <p>LUMOCRAFT es una identidad visual ficticia diseñada como ejercicio de branding. El objetivo fue crear
-                    un logotipo limpio, con un aire artesanal y tecnológico, ideal para una marca vinculada a la
-                    creatividad, la innovación o el diseño de iluminación.</p>
             </div>
         </div>
     </section>
