Añadido Logo  a mi futuro proyecto

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
     <section id="inicio">
         <h2 class="typing">Hola, soy Daniel</h2>
         <p>Diseñador web & programador.</p>
-        <p>Combino diseño intuitivo con código limpio para crear experiencias web funcionales y visualmente impactantes.</p>
+        <p>Combino diseño intuitivo con código limpio para crear experiencias web funcionales y visualmente impactantes.
+        </p>
     </section>
 
     <section id="sobre-mi">
@@ -94,17 +95,21 @@
     <section id="proyectos-en-progreso">
         <h2>Proyectos en progreso</h2>
         <div class="proyectos-grid">
-            
+
             <div class="proyecto">
                 <h3>Web de mi futuro proyecto: Balsera Design</h3>
-                <p>Estoy desarrollando una web con wordpress para mi futuro proyecto, en la que las diferentes empresas podrán contactar conmigo para el diseño de 
-                sus páginas web, logos, mockups, etc..
+                <img src="./imgs/OpcionLogo2.png" alt="Proyecto 2" style=" width: 80%; height: auto;">
+
+                <p>Estoy desarrollando una web con wordpress para mi futuro proyecto, en la que las diferentes empresas
+                    podrán contactar conmigo para el diseño de
+                    sus páginas web, logos, mockups, etc..
                 </p>
                 <p>Fecha estimada: 25-07-2025</p>
             </div>
             <div class="proyecto">
                 <h3>Plataforma para Cinéfilos y Gamers</h3>
-                <p>Estoy desarrollando una plataforma de noticias y blogs sobre el mundo del cine, con nuevos estrenos, información sobre estos, sobre videojuegos, etc..</p>
+                <p>Estoy desarrollando una plataforma de noticias y blogs sobre el mundo del cine, con nuevos estrenos,
+                    información sobre estos, sobre videojuegos, etc..</p>
                 <p>Fecha estimada: 25-11-2025</p>
             </div>
         </div>
