Cambio correo electrónico

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <article class="proyectos-grid">
 
             <div class="proyecto">
-                <h3 data-i18n="proyectosEnProgreso.proyectos.0.nombre">Web de mi futuro proyecto: Balsera Design</h3>
+                <h3 data-i18n="proyectosEnProgreso.proyectos.0.nombre">Web de mi futuro proyecto: Balsera Developer</h3>
                 <img src="./imgs/OpcionLogo2.png" alt="Proyecto 2" style=" width: 80%; height: auto;">
                 <p data-i18n="proyectosEnProgreso.proyectos.0.descripcion">Estoy desarrollando una web con wordpress
                     para mi futuro proyecto...</p>
@@ -238,7 +238,7 @@
     <section id="contacto">
         <h2 data-i18n="contacto.title">Contacto</h2>
         <p><span data-i18n="contacto.correo">Correo: </span><a href="mailto:baseradesign@gmail.com"
-                data-i18n="contacto.correoLink">balseradesign@gmail.com</a></p>
+                data-i18n="contacto.correoLink">balseradeveloper@gmail.com</a></p>
         <p><span data-i18n="contacto.telefono">Teléfono: </span><a href="tel:+123456789"
                 data-i18n="contacto.telefonoLink">+34 690 99 50 89</a></p>
     </section>
