--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <p>Fecha estimada: 8-08-2025</p>
             </div>
             <div class="proyecto">
-                <h3>Clima-Sites</h3>
+                <h3>Nueva plataforma Innovadora: Clima-Sites</h3>
                 <p>Estoy desarrollando una app web en la que los usuarios
                     puedan comprobar el tiempo de la ciudad que deseen y además esta les sugiera sitios que puedan
                     visitar durante su estancia..</p>
