Mejora de portfolio

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         rel="stylesheet" />
     <link rel="stylesheet" href="./css/styles.css" />
     <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="https://code.iconify.design/iconify-icon/1.0.8/iconify-icon.min.js"></script>
 </head>
 
 <body>
@@ -78,8 +79,12 @@
                     maquetación utilizando WordPress, personalizando temas y plugins para adaptarlos a las necesidades
                     del cliente. El proyecto incluyó la optimización para SEO y la integración de funcionalidades
                     específicas solicitadas por la empresa.</p>
-                <a href="https://ecopycordoba.com/" target="_blank">Ver
-                    proyecto</a>
+                <div class="iconosTecnologias">
+                    <iconify-icon icon="simple-icons:wordpress"></iconify-icon>
+                    <iconify-icon icon="simple-icons:css"></iconify-icon>
+                    <iconify-icon icon="simple-icons:html5"></iconify-icon>
+                </div>
+                <a href="https://ecopycordoba.com/" target="_blank">Ver proyecto</a>
             </div>
 
             <div class="proyecto">
@@ -89,7 +94,28 @@
                     maquetación utilizando WordPress, personalizando temas y plugins para adaptarlos a las necesidades
                     del cliente. El proyecto incluyó la optimización para SEO y la integración de funcionalidades
                     específicas solicitadas por la empresa. </p>
+                <div class="iconosTecnologias">
+                    <iconify-icon icon="simple-icons:wordpress"></iconify-icon>
+                    <iconify-icon icon="simple-icons:css"></iconify-icon>
+                    <iconify-icon icon="simple-icons:html5"></iconify-icon>
+                </div>
                 <a href="https://escuelaparamamasmagicas.com/" target="_blank">Ver proyecto</a>
+            </div>
+
+            <div class="proyecto">
+                <img src="./imgs/Clima-Sites.png" alt="Proyecto 3" style=" width: 80%; height: auto;">
+                <h3>Clima-Sites</h3>
+                <p>Clima-Sites es una herramienta web interactiva que combina información meteorológica en tiempo real
+                    con recomendaciones turísticas inteligentes. Diseñada para viajeros, curiosos o locales, permite
+                    descubrir qué hacer en una ciudad en función del clima actual.</p>
+                <div class="iconosTecnologias">
+                    <iconify-icon icon="simple-icons:javascript"></iconify-icon>
+                    <iconify-icon icon="simple-icons:css"></iconify-icon>
+                    <iconify-icon icon="simple-icons:html5"></iconify-icon>
+                    <iconify-icon icon="simple-icons:nodedotjs"></iconify-icon>
+                    <iconify-icon icon="simple-icons:bootstrap"></iconify-icon>
+                </div>
+                <a href="https://clima-sites.vercel.app/" target="_blank">Ver proyecto</a>
             </div>
         </article>
     </section>
@@ -100,17 +126,10 @@
 
             <div class="proyecto">
                 <h3>Web de mi futuro proyecto: Balsera Developer</h3>
-                <img src="./imgs/OpcionLogo2.png" alt="Proyecto 2" style=" width: 80%; height: auto;">
+                <img src="./imgs/LogoLightmode.png" alt="Proyecto 2" style=" width: 80%; height: auto;" id="logo-proyecto">
                 <p>Estoy desarrollando una web con wordpress para mi futuro proyecto, en la que las diferentes empresas
                     podrán contactar conmigo para el diseño de sus páginas web, logos, mockups, etc.. </p>
                 <p>Fecha estimada: 8-08-2025</p>
-            </div>
-            <div class="proyecto">
-                <h3>Nueva plataforma Innovadora: Clima-Sites</h3>
-                <p>Estoy desarrollando una app web en la que los usuarios
-                    puedan comprobar el tiempo de la ciudad que deseen y además esta les sugiera sitios que puedan
-                    visitar durante su estancia..</p>
-                <p>Fecha estimada: 15-07-2025</p>
             </div>
             <div class="proyecto">
                 <h3>Plataforma para Cinéfilos y Gamers</h3>
@@ -129,7 +148,7 @@
             <span class="skill-tag">WordPress (Avada)</span>
             <span class="skill-tag">WooCommerce</span>
             <span class="skill-tag">HTML5</span>
-            <span class="skill-tag">CSS</span>
+            <span class="skill-tag">CSS3</span>
             <span class="skill-tag">JavaScript</span>
             <span class="skill-tag">Consultoría ERP</span>
             <span class="skill-tag">Odoo</span>
