Nuevo proyecto subido.

--- a/index.html
+++ b/index.html
@@ -117,6 +117,20 @@
                 </div>
                 <a href="https://clima-sites.vercel.app/" target="_blank">Ver proyecto</a>
             </div>
+            <div class="proyecto">
+                <img src="./imgs/Capilearn.PNG" alt="Proyecto 4" style=" width: 80%; height: 165px;">
+                <h3>TFG: Capilearn</h3>
+                <p>Capilearn es una plataforma de estudiantes desarrollada para el instituto IES Gran Capitán donde los
+                    alumnos pueden subir contenido en forma de vídeo para ayudar a sus compañeros a estudiar.</p>
+
+                <div class="iconosTecnologias">
+                    <iconify-icon icon="simple-icons:javascript"></iconify-icon>
+                    <iconify-icon icon="simple-icons:css"></iconify-icon>
+                    <iconify-icon icon="simple-icons:html5"></iconify-icon>
+                    <iconify-icon icon="simple-icons:php"></iconify-icon>
+                </div>
+                <a href="https://github.com/balseradeveloper/TFG-Capilearn" target="_blank">Ver proyecto</a>
+            </div>
         </article>
     </section>
     <!-- Nueva sección: Proyectos en progreso -->
@@ -126,7 +140,8 @@
 
             <div class="proyecto">
                 <h3>Web de mi futuro proyecto: Balsera Developer</h3>
-                <img src="./imgs/LogoLightmode.png" alt="Proyecto 2" style=" width: 80%; height: auto;" id="logo-proyecto">
+                <img src="./imgs/LogoLightmode.png" alt="Proyecto 2" style=" width: 80%; height: auto;"
+                    id="logo-proyecto">
                 <p>Estoy desarrollando una web con wordpress para mi futuro proyecto, en la que las diferentes empresas
                     podrán contactar conmigo para el diseño de sus páginas web, logos, mockups, etc.. </p>
                 <p>Fecha estimada: 8-08-2025</p>
