Actualización del portfolio

--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
                 </div>
                 <a href="https://escuelaparamamasmagicas.com/" target="_blank">Ver proyecto</a>
             </div>
-
+        </article>
+        <h3 class="categoriaProyecto" style="margin-top:20px">Apps Web</h3>
+        <article class="proyectos-grid">
             <div class="proyecto">
                 <img src="./imgs/Clima-Sites.png" alt="Proyecto 3" style=" width: 80%; height: auto;">
                 <h3>Clima-Sites</h3>
@@ -131,6 +133,21 @@
                 </div>
                 <a href="https://github.com/balseradeveloper/TFG-Capilearn" target="_blank">Ver proyecto</a>
             </div>
+            <div class="proyecto">
+                <img src="./imgs/Destacadas.PNG" alt="Proyecto 5" style=" width: 80%; height: 165px;">
+                <h3>Frikema</h3>
+                <p>Frikema es una app web en la que puedes consultar los últimos estrenos del cine, así como ver
+                    información sobre
+                    películas de otros años y podrás consultar los cines más destacados de cada ciudad de andalucía.</p>
+                <div class="iconosTecnologias">
+                    <iconify-icon icon="simple-icons:javascript"></iconify-icon>
+                    <iconify-icon icon="simple-icons:tailwindcss"></iconify-icon>
+                    <iconify-icon icon="simple-icons:react"></iconify-icon>
+                    <iconify-icon icon="simple-icons:html5"></iconify-icon>
+                    <iconify-icon icon="simple-icons:typescript"></iconify-icon>
+                </div>
+                <a href="https://frikema-psi.vercel.app/" target="_blank">Ver proyecto</a>
+            </div>
         </article>
     </section>
     <!-- Nueva sección: Proyectos en progreso -->
@@ -147,10 +164,7 @@
                 <p>Fecha estimada: 8-08-2025</p>
             </div>
             <div class="proyecto">
-                <h3>Plataforma para Cinéfilos y Gamers</h3>
-                <p>Estoy desarrollando una plataforma de noticias y blogs sobre el mundo del cine, con nuevos estrenos,
-                    información sobre estos, sobre videojuegos, etc..</p>
-                <p>Fecha estimada: 25-11-2025</p>
+
             </div>
         </article>
     </section>
@@ -168,6 +182,7 @@
             <span class="skill-tag">Consultoría ERP</span>
             <span class="skill-tag">Odoo</span>
             <span class="skill-tag">php</span>
+            <span class="skill-tag">React</span>
         </div>
 
         <h3>Personales</h3>
