Subir nuevo proyecto

--- a/index.html
+++ b/index.html
@@ -154,17 +154,17 @@
     <section id="proyectos-en-progreso">
         <h2>Proyectos en progreso</h2>
         <article class="proyectos-grid">
-
             <div class="proyecto">
-                <h3>Web de mi futuro proyecto: Balsera Developer</h3>
-                <img src="./imgs/LogoLightmode.png" alt="Proyecto 2" style=" width: 80%; height: auto;"
-                    id="logo-proyecto">
-                <p>Estoy desarrollando una web con wordpress para mi futuro proyecto, en la que las diferentes empresas
-                    podrán contactar conmigo para el diseño de sus páginas web, logos, mockups, etc.. </p>
+                <h3>BalserAI</h3>
+                <img src="./imgs/BETABalseraAI.PNG" alt="BalserAI Logo" style="width: 80%; height: auto;" id="logo-proyecto">
+                <p>BalserAI será una inteligencia artificial diseñada para traducir documentos y proporcionar información relevante al usuario de forma automática y eficiente.</p>
                 <p>Fecha estimada: 8-08-2025</p>
-            </div>
-            <div class="proyecto">
-
+                <div class="iconosTecnologias">
+                    <iconify-icon icon="simple-icons:typescript"></iconify-icon>
+                    <iconify-icon icon="simple-icons:react"></iconify-icon>
+                    <iconify-icon icon="simple-icons:css3"></iconify-icon>
+                    <iconify-icon icon="simple-icons:tensorflow"></iconify-icon>
+                </div>
             </div>
         </article>
     </section>
