Añadidas nuevas habilidades y nueva descripción

--- a/index.html
+++ b/index.html
@@ -62,9 +62,8 @@
             como técnicamente sólidas.
         </p><br />
         <p>
-            Actualmente estoy construyendo mi portfolio y trabajando en varios proyectos personales. Si tienes una idea,
-            un proyecto o simplemente
-            quieres charlar sobre diseño y desarrollo, estaré encantado de conectar contigo.
+            Actualmente me estoy especializando en inteligencia artificial (AI) y consultoría en AI, aplicando mis conocimientos de desarrollo web y 
+            programación para crear soluciones innovadoras basadas en IA.
         </p>
     </section>
 
@@ -163,7 +162,7 @@
                     <iconify-icon icon="simple-icons:typescript"></iconify-icon>
                     <iconify-icon icon="simple-icons:react"></iconify-icon>
                     <iconify-icon icon="simple-icons:css3"></iconify-icon>
-                    <iconify-icon icon="simple-icons:tensorflow"></iconify-icon>
+                    <iconify-icon icon="simple-icons:tensorflow"></iconify-icon>                   
                 </div>
             </div>
         </article>
@@ -178,11 +177,13 @@
             <span class="skill-tag">WooCommerce</span>
             <span class="skill-tag">HTML5</span>
             <span class="skill-tag">CSS3</span>
-            <span class="skill-tag">JavaScript</span>
+            <span class="skill-tag">Javascript</span>
             <span class="skill-tag">Consultoría ERP</span>
             <span class="skill-tag">Odoo</span>
             <span class="skill-tag">php</span>
             <span class="skill-tag">React</span>
+            <span class="skill-tag">Typescript</span>
+            <span class="skill-tag">AI Consulting</span>
         </div>
 
         <h3>Personales</h3>
