--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
     <section id="cv">
         <h2>Descargar CV</h2>
         <p>Puedes descargar mi CV actualizado en formato PDF desde aquí:</p>
-        <a href="./docs/Daniel-Balsera-CV.pdf" download>Descargar CV</a>
+        <a href="./docs/CVDanielFernándezBalsera.pdf" download>Descargar CV</a>
     </section>
 
     <section id="redes">
