--- a/index.html
+++ b/index.html
@@ -276,9 +276,19 @@
 
     <section id="personal">
         <h2>Sobre mí (Personal)</h2>
-        <p>Soy una persona proactiva, organizada y con muchas ganas de seguir creciendo
-            en el mundo del desarrollo web y software...</p>
-    </section>
+        <p>
+            Soy una persona proactiva, organizada y con muchas ganas de seguir creciendo en el mundo del desarrollo web y software. Me considero curioso por naturaleza, lo que me lleva a investigar y aprender constantemente sobre nuevas tecnologías y tendencias del sector.
+        </p>
+        <p>
+            Disfruto trabajando en equipo, compartiendo conocimientos y apoyando a mis compañeros para alcanzar objetivos comunes. Valoro la comunicación clara y la colaboración como pilares fundamentales para el éxito de cualquier proyecto.
+        </p>
+        <p>
+            Fuera del ámbito profesional, me apasiona la música, el cine y la tecnología. Me gusta dedicar tiempo a mis hobbies, como tocar la guitarra, explorar nuevas herramientas digitales y participar en comunidades tecnológicas.
+        </p>
+        <p>
+            Mi objetivo es seguir desarrollándome tanto a nivel técnico como personal, aportando valor en cada proyecto y manteniendo siempre una actitud positiva y de aprendizaje continuo.
+        </p>
+        </section>
 
     <section id="cv">
         <h2>Descargar CV</h2>
