--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
                 <h3>Clima-Sites</h3>
                 <p>Clima-Sites es una herramienta web interactiva que combina información meteorológica en tiempo real
                     con recomendaciones turísticas inteligentes. Diseñada para viajeros, curiosos o locales, permite
-                    descubrir qué hacer en una ciudad en función del clima actual.</p>
+                    descubrir qué hacer en una ciudad en función del clima actual. <br>
+                    <strong>(Actualmente solo funciona la parte de ver el tiempo de la ciudad debido a un problema interno de la API externa que se encarga de obtener las ubicaciones de los sitios)</strong>
+                </p>
                 <div class="iconosTecnologias">
                     <iconify-icon icon="simple-icons:javascript"></iconify-icon>
                     <iconify-icon icon="simple-icons:css"></iconify-icon>
