--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <p>Clima-Sites es una herramienta web interactiva que combina información meteorológica en tiempo real
                     con recomendaciones turísticas inteligentes. Diseñada para viajeros, curiosos o locales, permite
                     descubrir qué hacer en una ciudad en función del clima actual. <br>
-                    <strong>(Actualmente solo funciona la parte de ver el tiempo de la ciudad debido a un problema interno de la API externa que se encarga de obtener las ubicaciones de los sitios)</strong>
+                    <strong>(Actualmente solo funciona la parte de ver el tiempo de la ciudad debido a un problema de la API externa que se encarga de obtener las ubicaciones de los sitios)</strong>
                 </p>
                 <div class="iconosTecnologias">
                     <iconify-icon icon="simple-icons:javascript"></iconify-icon>
