Actualización botón climasites

--- a/index.html
+++ b/index.html
@@ -118,7 +118,10 @@
                     <iconify-icon icon="simple-icons:nodedotjs"></iconify-icon>
                     <iconify-icon icon="simple-icons:bootstrap"></iconify-icon>
                 </div>
-                <a href="https://clima-sites.vercel.app/" target="_blank">Ver proyecto</a>
+                <a href="https://clima-sites.vercel.app/" target="_blank" disabled style="pointer-events: none; opacity: 0.6; cursor: not-allowed;">
+                    Ver proyecto (En mejoras)
+                </a>
+                <span style="display:block; color:#e67e22; font-size:0.95em; margin-top:4px;">Actualmente en mantenimiento y mejoras</span>
             </div>
             <div class="proyecto">
                 <img src="./imgs/Capilearn.PNG" alt="Proyecto 4" style=" width: 80%; height: 165px;">
