--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
                 <h3>Clima-Sites</h3>
                 <p>Clima-Sites es una herramienta web interactiva que combina información meteorológica en tiempo real
                     con recomendaciones turísticas inteligentes. Diseñada para viajeros, curiosos o locales, permite
-                    descubrir qué hacer en una ciudad en función del clima actual. <br>
-                    <strong>(Actualmente solo funciona la parte de ver el tiempo de la ciudad debido a un problema de la API externa que se encarga de obtener las ubicaciones de los sitios)</strong>
+                    descubrir qué hacer en una ciudad en función del clima actual. 
                 </p>
                 <div class="iconosTecnologias">
                     <iconify-icon icon="simple-icons:javascript"></iconify-icon>
